[package]
authors = ["cairoliang <shuimuliang@gmail.com>"]
name = "tonic-reconnect-demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"
required-features = ["retry"]

[[bin]]
name = "helloworld-timeout-client"
path = "src/timeout/client.rs"
required-features = ["timeout"]

[[bin]]
name = "helloworld-timeout-server"
path = "src/timeout/server.rs"
required-features = ["timeout"]

[features]
timeout = ["tokio/time", "dep:tower"]
retry = ["dep:tower"]
full = ["timeout", "retry"]
default = ["full"]

[dependencies]
prost = "0.11.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
# tower = { git = "https://github.com/tower-rs/tower.git", branch = "lucio/standard-policy2", version = "0.4.12", features = ["retry", "timeout"], optional = true }
tower = { version = "0.4.13", optional = true, features = ["retry", "timeout"] }
futures = { version = "0.3", default-features = false, optional = true }
hyper = { version = "0.14", optional = true }
http = { version = "0.2", optional = true }
futures-util = "0.3.26"

[build-dependencies]
tonic-build = "0.8"
